--- a/ZaimaCSS/ZaimaUseCases.html
+++ b/ZaimaCSS/ZaimaUseCases.html
@@ -489,7 +489,6 @@ the overall readibility of electronically laid out Zaima in general, and to eval
 
 <p><strong>Issues:</strong>
 <ul>
-  <li>Verify the</li>
   <li>Determine if ደረ is actually ይረ.</li>
   <li>Determine if the first and second rows sequence from ኖ to ሃ is indeed contiguous.</li>
   <li>Determine if the marks in the space inbetween ኖ and ስ is essential.</li>
@@ -730,7 +729,7 @@ the overall readibility of electronically laid out Zaima in general, and to eval
 
 <p><strong>Issues:</strong>
 <ul>
-  <li>Verify ይ or ዶ in row 3</li>
+  <li>Verify ይ or ዶ in row 3.</li>
   <li>Look up the miliket for ኢ ይ ኃ to determine if these are 1, 2 or 3 miliket and if they should be written contiguously.</li>
   <li>Right justify desired for ኢ above ወ on row 3, and for both ጐ᎖ and ᎐᎖᎖ above ከ on rows 3 and 4 respectively</li>
   <li>፡ would vanish if placed after the closing ruby tag as per:<br/>
@@ -974,6 +973,7 @@ the overall readibility of electronically laid out Zaima in general, and to eval
 
 <h3>Use Case 8</h3>
 
+<p><strong>Features:</strong>
 <ul>
   <li>Four rows of annotation -verify that the apparent lower rows are independent.</li>
   <li>Hidet above ርጥቁ may is possibly a case of a nested Ruby (annotation with annotation as per serayu). May also be an example of joining Hidet.</li>
@@ -1602,8 +1602,6 @@ the overall readibility of electronically laid out Zaima in general, and to eval
 
 
 <p><br/></p>
-
-
 
 
 <h3>Use Case 16</h3>
