--- a/ZaimaCSS/WhatIsZaima.html
+++ b/ZaimaCSS/WhatIsZaima.html
@@ -102,9 +102,9 @@ f.additionalLinks = ''
   </section>
   <section>
   <h3 id="qirts"><a href="#qirts">Qirts (ቅርጽ)</a></h3>
-  <p>Qirts, or YeFidel Qirts, are notation marks used soley to denote voice inflection in zaima and are rendered in the interlinear notation lines.
+  <p><em>Qirts</em>, or <em>YeFidel Qirts</em>, are notation marks used soley to denote voice inflection in zaima and are rendered in the interlinear notation lines.
   They may be combined into chords for emphasis or modulation.
-  Though some authors will apply a broad definition for <dfn>neumes<dfn> that include qirts marks, the qirts are generally not classified as such.
+  Though some authors will apply a broad definition for <dfn>neumes</dfn> that include qirts marks, the qirts are generally not classified as such.
   Unlike typical neumes, qirts shapes do not reflect vocalization and their position does not indicate pitch. A subject of debate by purists,
   two special letters from the syllabary will be recognized as qirts.  These two are &lsquo;ር&rsquo;, short for &ldquo;አንብር&rsquo; (Anber) and
   &lsquo;ስ&rsquo; short for &ldquo;ደርስ&rdquo; (Dires). Anber and Dires are a special case of an abbreviation that is not grounded by a
@@ -112,7 +112,7 @@ f.additionalLinks = ''
   </section>
   <section>
   <h3 id="miliket"><a href="#miliket">Miliket (ምልክት)</a></h3>
-  <p>Miliket are rendered on the interlinear notation lines and make up the bulk of zaima notation. Miliket number in the many hundrends and are
+  <p><em>Miliket</em> are rendered on the interlinear notation lines and make up the bulk of zaima notation. Miliket number in the many hundrends and are
   abbreviations of a single word or of a few words. Like qirts the miliket define vocalization for the letters or word that they are positioned
   over. Miliket are specified by a context where the miliket itself was a word or phrase sung in the base text hymn and may have had qirts or
   other miliket applied to it. The context that grounds a miliket is known as its <a href="#sereyu">Sereyu</a>. Unlike qirts which will be
@@ -120,7 +120,7 @@ f.additionalLinks = ''
   </section>
   <section>
   <h3 id="sereyu"><a href="#sereyu">Sereyu (ሥረዩ)</a></h3>
-  <p>Sereyu marks a word in the base hymn as a reference point to define the vocalization of a miliket. The Sereyu point is marked with the
+  <p><em>Sereyu</em> marks a word in the base hymn as a reference point to define the vocalization of a miliket. The Sereyu point is marked with the
 abbreviation &ldquo;ረዩ&rdquo; or &lsquo;ዩ&rsquo; and appears in the interlinear notation along with miliket and qirts but is never vocalized.</p>
   </section>
   <section>
@@ -132,7 +132,7 @@ abbreviation &ldquo;ረዩ&rdquo; or &lsquo;ዩ&rsquo; and appears in the interl
   </section>
   <section>
   <h3 id="megdam"><a href="#megdam">Medgam (መድጋም)</a></h3>
-  <p>Medgam are Ethiopic numerals that appear in left side margin notes and signal that the line they are written adjacent to should be repeated
+  <p><em>Medgam</em> are Ethiopic numerals that appear in left side margin notes and signal that the line they are written adjacent to should be repeated
      (in accordance with the numeral's value). When a medgam number is present, the verse it applies to is first performed in vocal chant
      only following the lowest line of notation (this is known as <dfn>Qome Zaima</dfn>.  Incremental passes will follow successive lines upward
      and will likely be accompanied by the instruments sistrum and drum.  Unlike Beit, the medgam number may be rendered in a smaller point size
@@ -140,7 +140,7 @@ abbreviation &ldquo;ረዩ&rdquo; or &lsquo;ዩ&rsquo; and appears in the interl
   </section>
   <section>
   <h3 id="haleita"><a href="#haleita">Halleluya Numbers (ሃሌታ)</a></h3>
-  <p>Haleita or &ldquo;halleluya numbers&rdquo; are rendered in the hymn line and are another system of reference to an entry in a
+  <p><em>Haleita</em> or &ldquo;halleluya numbers&rdquo; are rendered in the hymn line and are another system of reference to an entry in a
    &lduo;haleita table&rdquo; which indicates how the halleluya melody should be sung. The system is similar to miliket referencing and
    is grounded in a <a href="#beit">beit</a> context.
   </p>
