Completion of the "Modes" section.

--- a/ZaimaCSS/WhatIsZaima.html
+++ b/ZaimaCSS/WhatIsZaima.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <title>What is Zaima?</title>
-<meta name="description" content="What are 'zaima' annotations?" />
+<meta name="description" content="What are 'zaima' notations?" />
 <script type="text/javascript">
 var f = { }
 
@@ -15,14 +15,14 @@ f.previousauthors = '' // as above
 f.modifiers = '' // people making substantive changes, and their affiliation
 f.searchString = 'qa-ruby' // blog search string - usually the filename without extensions
 f.firstPubDate = '2017-10-07' // date of the first publication of the document (after review)
-f.lastSubstUpdate = { date:'2016-02-10', time:'15:23'}  // date and time of latest substantive changes to this document
+f.lastSubstUpdate = { date:'2017-10-15', time:'15:23'}  // date and time of latest substantive changes to this document
 f.status = 'published'  // should be one of draft, review, published, notreviewed or obsolete
 f.path = '../' // what you need to prepend to a URL to get to the /International directory 
 
 // AUTHORS AND TRANSLATORS should fill in these assignments:
 f.thisVersion = { date:'2017-10-07', time:'15:23'} // date and time of latest edits to this document/translation
 f.contributors = '' // people providing useful contributions or feedback during review or at other times
-f.sources = 'Some of the text related to jukugo ruby is taken from the blog post <cite><a href="http://rishida.net/blog/?p=469">What’s so difficult about jukugo ruby?</a>' // describes sources of information
+f.sources = 'Some of the descriptive information presented here is paraphrased from <cite><a href="https://dash.harvard.edu/bitstream/handle/1/3292407/shelemay_chant.pdf">Oral and Written Transmission in Ethiopian Christian Chant</a>' // describes sources of information
 // also make sure that the lang attribute on the html tag is correct!
 
 // TRANSLATORS should fill in these assignments:
@@ -56,12 +56,12 @@ f.additionalLinks = ''
 <section>
   <div id="audience">
     <p><span id="intendedAudience" class="leadin">Intended audience:</span> 
-    anyone who has heard of Zaima annotations and would like to know a little more about it. </p>
+    anyone who has heard of Zaima notations and would like to know a little more about it. </p>
     <div id="updateInfo"></div><script>document.getElementById('updateInfo').innerHTML = g.updated</script>
   </div>
     
   <h2 id="question"><a href="#question">Question</a></h2>
-    <p class="question">What are 'Zaima' annotations?</p>
+    <p class="question">What are 'zaima' notations?</p>
 </section>
 
 
@@ -92,12 +92,15 @@ f.additionalLinks = ''
   review made here.  The following reviews the major visual components of zaima that are subject to delineation in markup languages and have layout
   and styling requirements in electronic documents.</p>
   <section>
-  <h3 id="selt"><a href="#selt">Modes (ስልት)</a></h3>
-  <p>Every line of Zaima notation embodies one of three modes of melodic vocalization. The three modes are Ge'ez (ግዕዝ ) characterized by 
-  . Ezil (ዕዝል) 
-   Araray (ዓራራይ).  By convention, Ezil notation will be rendered in red.
-   The mode is sometimes indicated in the hymn text or in a margin note (left side) but generally not as the pracitioner is expected to
-   know the appropriate mode by virtue of his training or by inspection of the <a href=""></a>
+  <h3 id="selt"><a href="#selt">Mode (ስልት)</a></h3>
+  <p>Every line of Zaima notation embodies one of three modes (ስልት or more literally &ldquo;order&rdquo;) of melodic vocalization. The first of the three modes is Ge&rsquo;ez (ግዕዝ) which in fact
+   means &ldquo;first&rdquo; in many contexts. It is the most frquent mode characterized by a strong, light and plain melody for everyday use (a 
+   &ldquo;base&rdquo; mode).
+   Ezil (ዕዝል) is somber and heavy sounding, its in a lower range than Ge&rsquo;ez mode and is used during fasting (such as during Lent), vigils (for example
+   during Holy Week)and funerals.  By convention, Ezil notation will be rendered in red.
+   Araray (ዓራራይ) is the upbeat, higher range mode characterized by strong, light and even jubilant.
+   The mode is sometimes indicated within the hymn text or in a margin note (left side) but generally not as the pracitioner is expected to
+   know the appropriate mode by virtue of his training or by inspection of the <a href="#miliket">miliket</a>.
   </p>
   </section>
   <section>
@@ -126,14 +129,14 @@ abbreviation &ldquo;ረዩ&rdquo; or &lsquo;ዩ&rsquo; and appears in the interl
   <section>
   <h3 id="beit"><a href="#beit">Beit (ቤት)</a></h3>
   <p>Literally meaning &ldquo;house&rdquo; the beit are abbreviations similar to the miliket that appear in left side margin notes that indicate
-  a <a href="#selt">mode (ስልት)</a> subcategory or &ldquo;family&rdquo; that the zaima's chant melody belongs to at a particular section.
+  a <a href="#selt">mode</a> subcategory or &ldquo;family&rdquo; that the zaima&rsquo;s chant melody belongs to at a particular section.
   In some hymns, the beit category may change every few verses. Beit markers are very often rendered with the upper and lower enclosing bars
   from Ethiopic numerals which in turn may be rubricized in red while the abbreviation letters may be either red or black.</p>
   </section>
   <section>
   <h3 id="megdam"><a href="#megdam">Medgam (መድጋም)</a></h3>
   <p><em>Medgam</em> are Ethiopic numerals that appear in left side margin notes and signal that the line they are written adjacent to should be repeated
-     (in accordance with the numeral's value). When a medgam number is present, the verse it applies to is first performed in vocal chant
+     (in accordance with the numeral&rsquo;s value). When a medgam number is present, the verse it applies to is first performed in vocal chant
      only following the lowest line of notation (this is known as <dfn>Qome Zaima</dfn>.  Incremental passes will follow successive lines upward
      and will likely be accompanied by the instruments sistrum and drum.  Unlike Beit, the medgam number may be rendered in a smaller point size
      (50% regular height as with the miliket).</p>
@@ -150,29 +153,21 @@ abbreviation &ldquo;ረዩ&rdquo; or &lsquo;ዩ&rsquo; and appears in the interl
 </section>
 
 
-  <!-- Model after:  https://www.w3.org/International/questions/qa-ruby -->
-
-
 <section>
   <h2 id="endlinks"><a href="#endlinks">Further reading</a></h2>
 <aside class="section" id="survey"> </aside><script>document.getElementById('survey').innerHTML = g.survey</script>
 
   <ul id="full-links">
     <li>
-      <p><cite>Requirements for Japanese Text Layout</cite></p>
+      <p><cite>Requirements for Ethiopic Text Layout</cite></p>
       <ul>
-        <li><a href="/TR/jlreq/#ruby_and_emphasis_dots">Ruby and emphasis dots</a></li>
-        <li><a href="/TR/jlreq/#positioning_of_jukugoruby">Positioning of jukugo-ruby</a></li>
+        <li><a href="..">Ethiopic Layout Requirements</a></li>
       </ul>
-    </li>
-    <li>
-      <p><cite><a href="http://r12a.github.io/scripts/bopomofo/ontheweb">Bopomofo on the Web</a></cite></p>
     </li>
     <li>
       <p>Related links, <cite>Authoring HTML &amp; CSS</cite></p>
       <ul>
-        <li><a href="/International/techniques/authoring-html#ruby">Using ruby markup</a></li>
-        <li><a href="/International/techniques/authoring-html#rubystyle">Styling ruby text</a></li>
+        <li><a href="https://www.w3.org/International/questions/qa-ruby">What is ruby?</a></li>
       </ul>
     </li>
     
